src/objects/LeanData__Profile_Permission_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>LeanData__Permission_Set_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Permission Set Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Profile_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Profile_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Profile Permission Setting</label>
</CustomObject>